change "Create React App" to "Create React DApp" where relevant

--- a/packages/babel-plugin-named-asset-import/package.json
+++ b/packages/babel-plugin-named-asset-import/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-plugin-named-asset-import",
   "version": "0.1.0",
-  "description": "Babel plugin for named asset imports in Create React App",
+  "description": "Babel plugin for named asset imports in Create React DApp",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
   "bugs": {
