--- a/packages/create-react-app/package.json
+++ b/packages/create-react-app/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "react"
   ],
-  "description": "Create React apps with no build configuration.",
+  "description": "Create React DApps with no build configuration.",
   "repository": "lepetitbloc/create-react-dapp",
   "license": "MIT",
   "engines": {
