--- a/packages/eslint-config-react-app/package.json
+++ b/packages/eslint-config-react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-react-app",
   "version": "2.1.0",
-  "description": "ESLint configuration used by Create React App",
+  "description": "ESLint configuration used by Create React DApp",
   "repository": "lepetitbloc/create-react-dapp",
   "license": "MIT",
   "bugs": {
