--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-scripts",
   "version": "1.1.0",
-  "description": "Configuration and scripts for Create React App.",
+  "description": "Configuration and scripts for Create React DApp.",
   "repository": "lepetitbloc/create-react-dapp",
   "license": "MIT",
   "engines": {
