--- a/packages/babel-plugin-named-asset-import/package.json
+++ b/packages/babel-plugin-named-asset-import/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-plugin-named-asset-import",
+  "name": "@lepetitbloc/babel-plugin-named-asset-import",
   "version": "0.1.0",
   "description": "Babel plugin for named asset imports in Create React DApp",
   "repository": "facebookincubator/create-react-app",
