--- a/packages/babel-preset-react-app/package.json
+++ b/packages/babel-preset-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-preset-react-app",
+  "name": "@lepetitbloc/babel-preset-react-app",
   "version": "3.1.1",
   "description": "Babel preset used by Create React DApp",
   "repository": "lepetitbloc/create-react-dapp",
