--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "@lepetitbloc/creact-scripts",
   "version": "1.1.0",
   "description": "Configuration and scripts for Create React DApp.",
   "repository": "lepetitbloc/create-react-dapp",
@@ -28,15 +28,15 @@
     "babel-eslint": "8.2.1",
     "babel-jest": "22.1.0",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": "^0.1.0",
-    "babel-preset-react-app": "^3.1.1",
+    "@lepetitbloc/babel-plugin-named-asset-import": "^0.1.0",
+    "@lepetitbloc/babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "2.3.0",
     "css-loader": "0.28.9",
     "dotenv": "5.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.15.0",
-    "eslint-config-react-app": "^2.1.0",
+    "@lepetitbloc/eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.41.0",
     "eslint-plugin-import": "2.8.0",
@@ -55,7 +55,7 @@
     "postcss-loader": "2.0.10",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": "^5.0.0",
+    "@lepetitbloc/react-dev-utils": "^5.0.0",
     "style-loader": "0.19.1",
     "svgr": "1.8.1",
     "sw-precache-webpack-plugin": "0.11.4",
